cmake_minimum_required(VERSION 3.0.2)
project(gps)

find_package(catkin REQUIRED COMPONENTS
  rospy
  std_msgs
  geometry_msgs
  message_generation
)

add_service_files(
  FILES
  InitializePose.srv
)

generate_messages(
  DEPENDENCIES
  std_msgs
  geometry_msgs
)

catkin_package(
  CATKIN_DEPENDS rospy std_msgs geometry_msgs message_runtime
)

catkin_install_python(PROGRAMS
  scripts/gps_to_utmk.py
  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
)